gcc/testsuite/g++.dg/template/crash115.C
// PR c++/56534

template < struct template rebind < > // { dg-error "expected" }
